# lab08

./: CPack.cmake  Dockerfile  LICENSE  README.md
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
